samples/_failures_safe/1761494358_a3deee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f4b70e4.c: In function ‘main’:
./samples/SAFE/__tmp_0f4b70e4.c:180:12: error: missing terminating " character
  180 |     printf("Available events:\
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0f4b70e4.c:180:5: error: expected expression at end of input
  180 |     printf("Available events:\
      |     ^~~~~~
./samples/SAFE/__tmp_0f4b70e4.c:180:5: error: expected declaration or statement at end of input
